Use mockito-inline in general instead of mockito-core